# axe-playwright-python

./: .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: python.yaml
api/: index.html
axe_core_python/: async_plalywright.py  async_playwright.py  base.py  selenium.py  sync_plalywright.py  sync_playwright.py
axe_playwright_python/: async_playwright.py  axe.min.js  base.py  sync_playwright.py  violations.txt
docs/: api.md  index.md  installation.md  usage.md
examples/: usage.py
tests/: test_axe_async_playwright.py  test_axe_core_python.py  test_axe_selenium.py  test_axe_sync_playwright.py  test_report.txt  test_report_color.txt  test_report_save.py  test_result.json
usage/: index.html
