[tool.poetry]
name = "axe-playwright-python"
version = "0.1.1"
description = "Automated web accessibility testing using axe-core engine and Playwright."
authors = ["Pamela Fox <pamela.fox@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/pamelafox/axe-playwright-python"
documentation = "https://pamelafox.github.io/axe-playwright-python"
keywords = ["accessibility", "axe", "axe-core",  "playwright"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Adaptive Technologies",
    "Topic :: Software Development",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]

[tool.poetry.dependencies]
python = "^3.10"
playwright = "^1.36.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4"
black = { version = "^23.7.0", allow-prereleases = true }
pytest-asyncio = "^0.21.0"
mkdocs = "^1.4.3"
mkdocstrings = {extras = ["python"], version = "^0.22.0"}
mkdocs-material = "^9.1.19"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
