[project]
name = "axe-playwright-python"
description = "Automated web accessibility testing using axe-core engine and Playwright."
version = "0.1.2"
authors = [{name = "Pamela Fox", "email" = "pamela.fox@gmail.com"}]
requires-python = ">=3.9"
readme = "README.md"
license = {file = "LICENSE"}
dependencies = [
    "playwright >= 1.36.0"
    ]
keywords = ["accessibility", "axe", "axe-core",  "playwright"]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Adaptive Technologies",
    "Topic :: Software Development",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    ]

[project.urls]
GitHub = "https://github.com/pamelafox/pytest-axe-playwright-snapshot"
Documentation = "https://pamelafox.github.io/axe-playwright-python"

[project.optional-dependencies]
test = [
    "pytest == 7.4.0",
    "pytest-cov == 4.1.0",
    "pytest-playwright == 0.3.3",
    "pytest-asyncio == 0.21.1",
    "mkdocs == 1.4.3",
    "mkdocstrings == 0.22.0",
    "mkdocs-material == 9.1.19",
    "black == 23.7.0",
    "ruff == 0.0.280",
]
build = [
    "flit"
]

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "axe_playwright_python"

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "I", "UP"]
ignore = ["D203"]
show-source = true

[tool.black]
line-length = 100
target-version = ["py39"]
